test/purchase-history-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: purchase-history-vs
  namespace: test
spec:
  hosts:
  - purchase-history.test.svc.cluster.local
  http:
  - route:
    - destination:
        host: purchase-history.test.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 80
    - destination:
        host: purchase-history.test.svc.cluster.local
        subset: v2
        port:
          number: 8080
      weight: 19
    - destination:
        host: purchase-history.test.svc.cluster.local
        subset: v3
        port:
          number: 8080
      weight: 1
