test/web-api-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-vs
spec:
  hosts:
  - "my-istioexplained.dev.att.com"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.test.svc.cluster.local
        port:
          number: 8080
